# solana-mini-app

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
src/: lib.rs
src/client/: config.ts  main.ts  utils.ts
src/client/models/: player.ts
src/client/module/: admin.ts  base.ts  player.ts
src/client/schema/: builder.ts  instructions.ts  states.ts  tag.ts
src/client/schema/state/: game-info.ts
src/client/to-delete/: main-old.ts
src/program/: Cargo.toml
src/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/program/tests/: functional.rs
src/script/: deploy.ts
