[package]
name = "learn_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
solana-program = "1.9.0"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"

[features]
no-entrypoint = []

[lib]
crate-type = ["cdylib", "lib"]