[package]
name = "learn_solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.1"
solana-program = "1.9.0"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
thiserror = "1.0.30"
num-traits = "0.2"
num-derive = "0.3"

[dev-dependencies]
solana-program-test = "1.9.2"
solana-sdk = "1.9.2"

[features]
no-entrypoint = []

[lib]
name = "learn_solana"
crate-type = ["cdylib", "lib"]